# nanzihan

./: .gitignore  LICENSE  README.md  nanzihan.cabal  stack.yaml
app/: Main.hs
data/: HSK1u.txt  HSK2u.txt  HSK3u.txt  HSK4u.txt  HSK5u.txt  HSK6u.txt  README.md
src/: Lib.hs
