name:                nanzihan
version:             0.1.0.0
synopsis:            Hanzi test data generator
description:         Please see README.md
homepage:            https://github.com/MarkMcCaskey/nanzihan#readme
license:             BSD3
license-file:        LICENSE
author:              Mark McCaskey
maintainer:          mmccask2@gmu.edu
copyright:           2016 Mark McCaskey
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , shelly
                     , shelly-extra
                     , include-file
                     , text

  default-language:    Haskell2010

executable nanzihan
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -optc-O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , shelly
                     , bytestring
                     , text
                     , shelly-extra
                     , nanzihan
                     , include-file
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nanzihan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarkMcCaskey/nanzihan
